# .emacs.d

./: .dir-locals.el  .gitignore  .gitmodules  .projectile  Makefile  abbrev_defs  devenv.nix  emacs-config.hs  emacs.org  fabfile.py  init.el  install-emacs.sh  install.sh  last-frame-state.el  minimal-theme.el  mise.toml  network-security.data  repos  scratch-repos  setup.py  system-init.py
cache/: org-glance-bookmark.el  org-glance-password-manager.el
chat/: xmpp.el
core/: assumptions.el  buffers.el  init-bindings.el  init-buffers.el  init-mac.el  init-req-dirs.el  init-shell.el  init-ui.el  mac.el  pack.el  sh.el  shell.el  ui.el  utils.el
docs/: config-reorg.org  index.org  network-hardening.md
editor/: ac.el  checkers.el  folding.el  log.el  macro.el  movements.el  search.el  snippets.el
elpa/: eglot-1.17.signed  jsonrpc-1.0.25.signed
emms/: cache
fs/: init-dired.el  rsync.el  ssh.el
lisp/: check-emacs-version.el  ej-autocomplete.el  init-auto-complete.el  init-bash.el  init-c.el  init-completion.el  init-crontab.el  init-csv.el  init-darcs.el  init-dired.el  init-direnv.el  init-dirs.el  init-docker.el  init-editing-utils.el  init-editor.el  init-elpa.el  init-eshell-commands.el  init-exec-path.el  (+46 more)
src/parquet-mode/rust/: Cargo.toml
src/parquet-mode/rust/src/: lib.rs
src/repos/: .gitignore  CHANGELOG.md  README.md  repos.cabal  repos.el  table-view.el  test-repos.el
src/repos/app/: Main.hs
src/repos/backend/: repos-backend.cabal
src/repos/backend/src/Repos/: Git.hs  Types.hs
src/repos/src/Repos/: Discover.hs  Git.hs  Table.hs  Types.hs
(+685 files in other folders)
